doing show product number picker

--- a/lib/i18n/en_US.json
+++ b/lib/i18n/en_US.json
@@ -36,6 +36,7 @@
   "show_product": {
     "stock" : "Stock",
     "items" : "Items",
-    "add_to_cart" : "Add to Cart"
+    "add_to_cart" : "Add to Cart",
+    "total_price" : "Total Price"
   }
 }
