--- a/lib/i18n/fa_IR.json
+++ b/lib/i18n/fa_IR.json
@@ -38,5 +38,9 @@
     "items" : "عدد",
     "add_to_cart" : "اضافه به سبد خرید",
     "total_price" : "مبلغ کل"
+  },
+  "cart": {
+    "cart": "سبد خرید",
+    "buy": "خرید"
   }
 }
