--- a/lib/i18n/fa_IR.json
+++ b/lib/i18n/fa_IR.json
@@ -46,6 +46,7 @@
     "buy": "خرید",
     "confirm": "تایید",
     "sure_to_remove": "از حذف",
-    "from_cart_": "از سبد خرید اطمینان دارید؟"
+    "from_cart_": "از سبد خرید اطمینان دارید؟",
+    "cart_is_empty": "سبد خرید خالی است"
   }
 }
