--- a/lib/i18n/fa_IR.json
+++ b/lib/i18n/fa_IR.json
@@ -33,7 +33,10 @@
     "app_name": "فروشگاه من",
     "categories": "دسته بندی ها",
     "populars": "محبوب ها",
-    "home": "خانه"
+    "home": "خانه",
+    "logout":"خروج از حساب کاربری",
+    "sure_to_logout":"آیا می خواهید از حساب کاربری خود خارج شوید؟",
+    "language": "زبان"
   },
   "show_product": {
     "stock" : "موجودی",
