--- a/lib/i18n/en_US.json
+++ b/lib/i18n/en_US.json
@@ -37,7 +37,8 @@
     "logout":"Logout",
     "sure_to_logout":"Sure to Logout?",
     "language": "Language",
-    "search_product": "Search Product"
+    "search_product": "Search Product",
+    "no_item_found": "No item found"
   },
   "show_product": {
     "stock" : "Stock",
