--- a/lib/i18n/fa_IR.json
+++ b/lib/i18n/fa_IR.json
@@ -11,7 +11,8 @@
     "error": "خطا",
     "success": "موفق",
     "cancel": "لغو",
-    "remove": "حذف"
+    "remove": "حذف",
+    "currency": "تومان"
   },
   "sign_up": {
     "first_name": "نام",
