--- a/lib/i18n/fa_IR.json
+++ b/lib/i18n/fa_IR.json
@@ -45,7 +45,8 @@
     "stock" : "موجودی",
     "items" : "عدد",
     "add_to_cart" : "اضافه به سبد خرید",
-    "total_price" : "مبلغ کل"
+    "total_price" : "مبلغ کل",
+    "not_available": "ناموجود"
   },
   "cart": {
     "cart": "سبد خرید",
@@ -54,5 +55,12 @@
     "sure_to_remove": "از حذف",
     "from_cart_": "از سبد خرید اطمینان دارید؟",
     "cart_is_empty": "سبد خرید خالی است"
+  },
+  "filter": {
+    "price": "قیمت",
+    "min": "حداقل",
+    "max" : "حداکثر",
+    "only_available_products": "فقط کالاهای موجود",
+    "filter": "فیلتر"
   }
 }
