fixed unavailable string, fixed filter bottom sheet not updating product list to filter

--- a/lib/i18n/fa_IR.json
+++ b/lib/i18n/fa_IR.json
@@ -46,7 +46,7 @@
     "items" : "عدد",
     "add_to_cart" : "اضافه به سبد خرید",
     "total_price" : "مبلغ کل",
-    "not_available": "ناموجود"
+    "unavailable": "ناموجود"
   },
   "cart": {
     "cart": "سبد خرید",
