doing show product admin

--- a/lib/i18n/en_US.json
+++ b/lib/i18n/en_US.json
@@ -66,5 +66,8 @@
   },
   "show_product_list": {
     "filtered_products": "Filtered Products"
+  },
+  "home_page_admin": {
+    "edit": "Edit"
   }
 }
