--- a/lib/i18n/fa_IR.json
+++ b/lib/i18n/fa_IR.json
@@ -66,5 +66,8 @@
   },
   "show_product_list": {
     "filtered_products": "محصولات فیلتر شده"
+  },
+  "home_page_admin": {
+    "edit": "ویرایش"
   }
 }
