--- a/lib/i18n/fa_IR.json
+++ b/lib/i18n/fa_IR.json
@@ -80,6 +80,7 @@
     "description_hint": "توضیحات محصول را بنویسید",
     "price_hint": "قیمت محصول را بنویسید",
     "stock_hint": "موجودی محصول را وارد کنید",
-    "save": "ذخیره"
+    "save": "ذخیره",
+    "description": "توضیحات"
   }
 }
