doing add edit product

--- a/lib/i18n/fa_IR.json
+++ b/lib/i18n/fa_IR.json
@@ -83,6 +83,8 @@
     "save": "ذخیره",
     "description": "توضیحات",
     "product_edited_successfully": "محصول با موفقیت ویرایش شد",
-    "product_added_successfully": "محصول با موفقیت اضافه شد"
+    "product_added_successfully": "محصول با موفقیت اضافه شد",
+    "stock_must_be_numeric": "موجودی وارد شده باید عدد باشد",
+    "price_must_be_numeric": "قیمت وارد شده باید عدد باشد"
   }
 }
