doing add edit product, wanna start some changes to models, like image instead of images and whole category instead of category id

--- a/lib/i18n/en_US.json
+++ b/lib/i18n/en_US.json
@@ -85,6 +85,8 @@
     "product_edited_successfully": "Product edited successfully",
     "product_added_successfully": "Product added successfully",
     "category": "Category",
-    "not_select": "Not Selected"
+    "not_selected": "Not selected",
+    "category_not_selected": "Category not selected",
+    "please_select_category": "Please select category"
   }
 }
