--- a/lib/i18n/en_US.json
+++ b/lib/i18n/en_US.json
@@ -90,6 +90,9 @@
     "category": "Category",
     "not_selected": "Not selected",
     "category_not_selected": "Category not selected",
-    "please_select_category": "Please select category"
+    "please_select_category": "Please select category",
+    "product_image_not_selected": "Product image not selected",
+    "please_select_product_image": "Please select product image",
+    "add_image": "Add image"
   }
 }
