done saving user to shared pref

--- a/lib/i18n/en_US.json
+++ b/lib/i18n/en_US.json
@@ -40,7 +40,8 @@
     "sure_to_logout": "Sure to Logout?",
     "language": "Language",
     "search_product": "Search Product",
-    "no_item_found": "No item found"
+    "no_item_found": "No item found",
+    "hello": "Hello"
   },
   "show_product": {
     "stock": "Stock",
