--- a/lib/i18n/en_US.json
+++ b/lib/i18n/en_US.json
@@ -95,5 +95,13 @@
     "product_image_not_selected": "Product image not selected",
     "please_select_product_image": "Please select product image",
     "add_image": "Add image"
+  },
+  "categories": {
+    "sure_to_delete_category": "Sure to delete category?",
+    "category_english_name": "Category English Name",
+    "category_english_name_label": "Enter category english name here",
+    "category_persian_name": "Category Persian Name",
+    "category_persian_name_label": "Enter category persian name here",
+    "add": "Add"
   }
 }
