--- a/lib/i18n/fa_IR.json
+++ b/lib/i18n/fa_IR.json
@@ -60,7 +60,10 @@
     "sure_to_remove": "از حذف",
     "from_cart_": "از سبد خرید اطمینان دارید؟",
     "cart_is_empty": "سبد خرید خالی است",
-    "are_you_sure_to_buy_these_items_": "Are you sure to buy these items?"
+    "are_you_sure_to_buy_these_items_": "Are you sure to buy these items?",
+    "purchase_was_successful": "خرید موفقیت آمیز بود",
+    "purchase_half_success_message": "خرید محصولات باقیمانده در سبد خرید ناموفق بود، لطفا دوباره تلاش کنید",
+    "purchase_fail_message": "خرید موفق نبود، لطفا دوباره تلاش کنید"
   },
   "filter": {
     "price": "قیمت",
